[gd_scene load_steps=3 format=3 uid="uid://cf5770vvkbmjq"]

[ext_resource type="Script" path="res://sences/setting_menu/setting_menu.gd" id="1_5850w"]
[ext_resource type="PackedScene" uid="uid://doy0w6pfwyhk8" path="res://sences/light_button/light_button.tscn" id="2_psv0v"]

[node name="setting_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5850w")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.350628, 0.283174, 0.629646, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -220.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TabBar2" type="TabBar" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Light:"

[node name="on_off_button" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="red_button" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_psv0v")]
layout_mode = 2
color = Color(1, 0, 0, 1)

[node name="green_button" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_psv0v")]
layout_mode = 2
color = Color(0, 1, 0, 1)

[node name="blue_button" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_psv0v")]
layout_mode = 2
color = Color(0, 0, 1, 1)

[node name="Color" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Color"

[node name="TabBar" type="TabBar" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="light_color" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TabBar2" type="TabBar" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Pump"

[node name="pump_on" type="CheckButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="TabBar3" type="TabBar" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Cooler"

[node name="cooler_on" type="CheckButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TabBar2" type="TabBar" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Temperature"

[node name="TabBar3" type="TabBar" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(22, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Hot"

[node name="temperature_hot" type="TextEdit" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "30"

[node name="TabBar4" type="TabBar" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Cold"

[node name="temperature_cold" type="TextEdit" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "20"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TabBar2" type="TabBar" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Humid"

[node name="TabBar3" type="TabBar" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "High"

[node name="humid_high" type="TextEdit" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "30"

[node name="TabBar4" type="TabBar" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Low"

[node name="humid_low" type="TextEdit" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "20"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TabBar2" type="TabBar" parent="VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Moisture"

[node name="TabBar3" type="TabBar" parent="VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(47, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "High"

[node name="moisture_high" type="TextEdit" parent="VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "30"

[node name="TabBar4" type="TabBar" parent="VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Low"

[node name="moisture_low" type="TextEdit" parent="VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "20"

[node name="TabBar2" type="TabBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="TabBar" type="TabBar" parent="VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="Apply_button" type="Button" parent="VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Apply"
icon_alignment = 1

[node name="TabBar2" type="TabBar" parent="VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/on_off_button" to="." method="_on_on_off_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer6/Apply_button" to="." method="_on_apply_button_pressed"]
